# beginning-rust-programming

./: .gitignore  flake.nix
ch-1/: Cargo.toml
ch-1/src/: main.rs
ch-10/: Cargo.toml
ch-10/src/: args.rs  main.rs
ch-11/rocket-serv/: Cargo.toml  bacon.txt
ch-11/rocket-serv/src/: main.rs
ch-11/warp-serv/: Cargo.toml
ch-11/warp-serv/src/: main.rs
ch-12/: Cargo.toml
ch-12/src/: args.rs  main.rs
ch-13/: Cargo.toml
ch-13/src/: main.rs
ch-14/btree/: Cargo.toml  values.txt
ch-14/btree/src/: args.rs  main.rs
ch-14/dvd/: Cargo.toml
ch-14/dvd/src/: main.rs
ch-14/temp/: Cargo.toml  temperatures.txt
ch-14/temp/src/: args.rs  main.rs
ch-14/vec/: Cargo.toml
ch-14/vec/src/: args.rs  main.rs
ch-15/factorial/: Cargo.toml
ch-15/factorial/src/: main.rs
ch-15/hanoi/src/: main.rs
ch-15/ml/: Cargo.toml  fakecorrelation.flow
ch-15/ml/src/: main.rs
ch-15/zelia/: Cargo.toml
ch-15/zelia/src/: main.rs
ch-2/: Cargo.toml  output.txt  sample-grid
ch-2/src/: main.rs
ch-3/ch-3-rustc_serialize/: Cargo.toml
ch-3/ch-3-rustc_serialize/src/: main.rs
ch-3/ch-3-serde/: Cargo.toml  file.json
ch-3/ch-3-serde/src/: main.rs
ch-4/: Cargo.toml
ch-4/src/: main.rs
ch-5/: Cargo.toml
ch-5/src/: main.rs
ch-6/: Cargo.toml
ch-6/src/: main.rs
ch-7/: Cargo.toml
ch-7/src/: main.rs
ch-8/: .env  Cargo.toml  TODO.md  stratapp.db
ch-8/src/: args.rs  database.rs  dbfuncs.rs  finding.rs  main.rs
ch-9/: docker-compose.yaml
ch-9/retriever/: Cargo.toml
ch-9/retriever/src/: main.rs
ch-9/storer/: Cargo.toml  people.json
ch-9/storer/src/: main.rs
