[package]
name = "ch-10"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
hyper = { version = "0.14.23", features = ["client", "http1"] }
hyper-tls = "0.5.0"
tokio = { version = "1.23.0", features = ["macros", "net", "fs", "io-util", "rt-multi-thread"] }
voca_rs = "1.15.2"
