[package]
name = "ch-8"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
dotenv = "0.15.0"
futures = "0.3.25"
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.91"
#sqlite = "0.30.3"
sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls" , "sqlite" ] }
tokio = { version = "1", features = ["full"] }
